[package]
name = "locale-types"
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "Idiomatic types for locale identifiers."
documentation = "https://docs.rs/crate/locale-types"
repository = "https://github.com/johnstonskj/locale-types.git"
readme = "README.md"
license = "MIT"
keywords = ["locale", "POSIX"]
categories = ["Internationalization (i18n)", "Localization (L10n)", "Operating systems"]

[dependencies]
lazy_static = "1.3.0"
regex = "1"
