[package]
name = "locale-strict"
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "Idiomatic, strictly validated, types for locale identifiers."
documentation = "https://docs.rs/crate/locale-strict"
repository = "https://github.com/johnstonskj/locale-strict.git"
readme = "README.md"
license = "MIT"
keywords = ["locale", "POSIX"]
categories = ["internationalization", "localization"]

[dependencies]
locale-types = "0.4.0"
locale-codes = "0.3.0"